# teacher_evaluation

./: .gitignore  README.md
backend/: README.md  config.py  main.py  pyproject.toml  utils.py
backend/api/: admin.py  superuser.py  teacher.py
backend/auth/: authentication.py  security.py
backend/database/: CommentDAO.py  ScoreDAO.py  TeacherDAO.py  crud.py  insert.py  query.py  table.py  updata.py
backend/database/DAO/: AdminDAO.py  CommentDAO.py  ScoreDAO.py  TeacherDAO.py
backend/routers/: adminHTML.py  superusers.py  teacherHTML.py  users.py
backend/schemas/: admin.py  comment.py  response.py  score.py  systemInfo.py  teacher.py
backend/tests/: database.py  main.py
backstage/: README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
backstage/src/: App.vue  main.ts
backstage/src/components/: LoginBox.vue  SideBar.vue  UpdateScoreCard.vue  UpdateTeacherCard.vue
backstage/src/router/: index.ts
backstage/src/themes/: Comment.ts  Response.ts  Score.ts  SystemInfo.ts  Teacher.ts  Token.ts
backstage/src/views/: CommentView.vue  ScoreView.vue  ScriptView.vue  SystemView.vue  TeacherView.vue
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: base.css
frontend/src/components/: HomePage.vue  TeacherBrief.vue  TeacherComment.vue  TeacherGrade.vue  TeacherInfo.vue
teacher_info/: README.md  main.py  教师头像.py  教师详细信息.py  爬取教师名单.py
