[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["StillMisty <1772797842@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.17"
fastapi = {extras = ["all"], version = "^0.99.1"}
markdown = "^3.4.3"
ujson = "^5.8.0"
ipy = "^1.1"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
